Make CSS coding and arrangements

--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -1,1 +1,49 @@
-
+.header{
+  font-family: Helvetica;
+  text-align: center;
+  color: white;
+  background-image: url("../Images/building.png");
+}
+h1 {
+  font-size: 70px;
+  font-weight: bold;
+}
+.menu{
+  font-size: 18px;
+}
+a:link {
+  color: white;
+}
+.process{
+  font-family: Helvetica;
+  text-align:center;
+}
+h2 {
+  font-size: 32px;
+  font-weight: bold;
+}
+h3{
+  font-size: 23px;
+  font-weight: bold;
+}
+p{
+  font-size: 14px;
+}
+h3.designed {
+  font-family: Helvetica;
+  font-size: 23px;
+  font-weight: bold;
+  color: white;
+  text-align:center;
+  background-image: url("../Images/building.png");
+}
+.final{
+  font-family: Helvetica;
+  text-align: center;
+}
+p.footage{
+  font-family: Helvetica;
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
+}
